--- a/gb/17/6/25/n9304011.md
+++ b/gb/17/6/25/n9304011.md
@@ -1,67 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jbnpp2467/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>感人画面：野放黑猩猩主动与恩人拥抱道别</h2>
-<a href="https://git.io/JvRDC"><img width="600" src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/06/comic-4462460v-600x400.jpg" />
+<h6>黑猩猩示意图。（pixabay）
+</h6>
 <hr>
-<p>【大纪元2017年06月25日讯】（大纪元记者陈俊村报导）珍?古德（Jane Goodall）是英国生物学家暨动物保育人士，她长期致力于<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9.md#1">黑猩猩</a>的野外研究，在国际上拥有一定的知名度和影响力。她的团队曾于2013年在非洲丛林<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E9%87%8E%E6%94%BE.md#1">野放</a>一只被他们救活的<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9.md#1">黑猩猩</a>温达（Wounda）。温达似乎很有<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E7%81%B5%E6%80%A7.md#1">灵性</a>，在临别时主动深情拥抱她这位救命<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E6%81%A9%E4%BA%BA.md#1">恩人</a>。而这感人的一幕，一直让她难以忘怀。</p>
+<p>【大纪元2017年06月25日讯】（大纪元记者陈俊村报导）珍?古德（Jane Goodall）是英国生物学家暨动物保育人士，她长期致力于<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9.md#1">黑猩猩</a>的野外研究，在国际上拥有一定的知名度和影响力。她的团队曾于2013年在非洲丛林<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%87%8E%E6%94%BE.md#1">野放</a>一只被他们救活的<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%BB%91%E7%8C%A9%E7%8C%A9.md#1">黑猩猩</a>温达（Wounda）。温达似乎很有<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%81%B5%E6%80%A7.md#1">灵性</a>，在临别时主动深情拥抱她这位救命<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%81%A9%E4%BA%BA.md#1">恩人</a>。而这感人的一幕，一直让她难以忘怀。</p>
 <p>由古德所创办的区庞噶黑猩猩康复中心（Tchimpounga Chimpanzee Rehabilitation Center）位于刚果共和国，迄今已成立20多年。对于因非法狩猎、贩售而受害的黑猩猩而言，该中心一直是能提供疗养及希望的场所。</p>
 <p>以温达为例，它于2012年被发现病得很严重并送到康复中心。它的名字在刚果话中的意思就是“接近死亡”，这其实说明了一切。</p>
 <p>由于多种病痛的折磨，加上体重急速下滑，温达已经奄奄一息，而该中心为了挽救它的生命，就必须分秒必争地与时间竞赛，并尽最大努力照顾它。</p>
-<p>所幸它最终恢复健康，而且强壮到可以回到野外，此时该中心决定将它<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E9%87%8E%E6%94%BE.md#1">野放</a>。工作人员先将它置入木箱内，再以车船送到在刚果奎卢河（Kouilou River）的一个小岛上，这里有茂密的森林可供它栖息。</p>
+<p>所幸它最终恢复健康，而且强壮到可以回到野外，此时该中心决定将它<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%87%8E%E6%94%BE.md#1">野放</a>。工作人员先将它置入木箱内，再以车船送到在刚果奎卢河（Kouilou River）的一个小岛上，这里有茂密的森林可供它栖息。</p>
 <p>在木箱打开之后，温达坐在木箱上左顾右盼，似乎是在观察新的生活环境。突然之间，它转向古德，给她一个深情的拥抱，仿佛是在与她道别或感谢她的救命之恩。尽管双方没有任何言语，但这个动作却清楚地表达了双方的感觉。</p>
 <p>古德表示，这是很感人的时刻，也是她经历过最惊人的事情之一，而温达的拥抱所带来的温暖，是她永远无法忘怀的。</p>
 <p>在众人的目送之下，温达重返大自然，展开了它人生的另一个阶段。在这里，它可以自由漫游，聆听树林里的声音，或与同伴一起嬉戏。而各式各样的树木，则提供了新鲜的水果供其食用，能确保其生活无虞。#</p>
-<p><a src=""></a><a href="https://git.io/JvRDC"><img width="600" src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/ClOMa_GufsA?rel=0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>&nbsp;</p>
 <p>责任编辑：茉莉</p>
 
 <hr>
-<hr>
+
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/8/10/n2991298.md#1">拯救黑猩猩  别再为取悦人类而受虐</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/5/6/n3249191.md#1">小黑猩猩离开妈妈  人们这样喂它...好可爱哦</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/10/18/n3989243.md#1">黑猩猩也爱机器人 送礼交友社交兴致高</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/9/21/n4253799.md#1">饲养员流产 懂人话黑猩猩比手语“哭”了</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/4/14/n4411321.md#1">拒绝偷拍？ 黑猩猩击落无人机</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/6/13/n4456976.md#1">珍古德奔走有成 美修法保育豢养黑猩猩</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/23/n8228818.md#1">研究：黑猩猩偏好合作更甚竞争</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/29/n9199310.md#1">与黑猩猩斗智10年 台保育员从被扔粪到信任</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/1/10/n11781469.md#1">野火灾情惨重 澳洲青年开车四处救无尾熊</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/1/9/n11778706.md#1">澳洲野火肆虐 鳄鱼先生一家救下9万只动物</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/8/10/n2991298.md#1">拯救黑猩猩  别再为取悦人类而受虐</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/11/5/6/n3249191.md#1">小黑猩猩离开妈妈  人们这样喂它...好可爱哦</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/13/10/18/n3989243.md#1">黑猩猩也爱机器人 送礼交友社交兴致高</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/14/9/21/n4253799.md#1">饲养员流产 懂人话黑猩猩比手语“哭”了</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/15/4/14/n4411321.md#1">拒绝偷拍？ 黑猩猩击落无人机</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/15/6/13/n4456976.md#1">珍古德奔走有成 美修法保育豢养黑猩猩</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/23/n8228818.md#1">研究：黑猩猩偏好合作更甚竞争</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/29/n9199310.md#1">与黑猩猩斗智10年 台保育员从被扔粪到信任</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/10/21/n12490602.md#1">英男发推文说心情不好 收到10万则暖心留言</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/9/14/n12402112.md#1">英国女童写信给在天堂的小猫 意外收到回信</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li><hr>
-
-
-<strong>热门新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/1/21/n11810638.md#1">【思想领袖】迈克尔：时间站在香港这一边</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/19/n11952797.md#1">【现场视频】风吹保护套卷轿车 几百户面临火灾</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947465.md#1">【抗疫家务通】这5类食物 进微波炉可能伤人</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/25/n9304011.htm">感人画面：野放黑猩猩主动与恩人拥抱道别</a></p><hr>
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jbnpp2467/djy/blob/master/gb/17/6/25/n9304011.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/25/n9304011.htm">感人画面：野放黑猩猩主动与恩人拥抱道别</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/17/6/25/n9304011.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
